--- a/app/src/main/res/layout/fragment_bbs.xml
+++ b/app/src/main/res/layout/fragment_bbs.xml
@@ -86,6 +86,7 @@
                 app:tabPaddingTop="-1dp"
                 font:name="GOTHAM_BOLD"
                 font:tabTextColor="@color/black"
+                style="@style/MyTabLayoutTextAppearance"
                 android:elevation="2dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
