--- a/app/src/main/res/drawable/btn_shape_all_transparant_blue.xml
+++ b/app/src/main/res/drawable/btn_shape_all_transparant_blue.xml
@@ -6,7 +6,7 @@
         android:startColor="@color/transparant_pure" />
 
     <stroke
-        android:color="@color/blu3"
+        android:color="@color/colorSearch"
         android:width="1dp"
         />
 
