--- a/app/src/main/res/layout/row_persuratan_pribadi.xml
+++ b/app/src/main/res/layout/row_persuratan_pribadi.xml
@@ -134,7 +134,7 @@
             <RelativeLayout
                 android:id="@+id/btnPrint"
                 android:layout_height="@dimen/space_35"
-                android:background="@drawable/btn_shape_facebook"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="lihat detail"
                 android:textColor="#ffffff"
@@ -146,16 +146,19 @@
                 android:layout_marginRight="@dimen/space_3"
                 android:layout_alignBottom="@+id/btnDownload">
                 <ImageView
+                    android:id="@+id/imgInfo"
                     android:src="@drawable/info_32"
+                    android:tint="@color/grey"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25" />
 
                 <ui.CustomtextView
+                    android:id="@+id/textInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:onClick="onClick"
                     android:text="lihat detail"
-                    android:textColor="#ffffff"
+                    android:tint="@color/grey_s"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
@@ -171,7 +174,7 @@
             <RelativeLayout
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
-                android:background="@drawable/btn_shape_all_blue"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
@@ -183,18 +186,21 @@
                 android:layout_alignEnd="@+id/layout_attachment"
                 android:layout_width="103dp">
                 <ImageView
+                    android:id="@+id/imgDownload"
                     android:src="@drawable/downloadsave32"
+                    android:tint="@color/grey"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25"
                     android:layout_marginRight="@dimen/space_3" />
 
                 <ui.CustomtextView
+                    android:id="@+id/textDownload"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="onClick"
                     android:text="lihat surat"
-                    android:textColor="#ffffff"
+                    android:tint="@color/grey_s"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
