--- a/app/src/main/res/layout/fragment_persuratan_pribadi.xml
+++ b/app/src/main/res/layout/fragment_persuratan_pribadi.xml
@@ -135,7 +135,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/layout_button"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -167,7 +167,7 @@
                     android:src="@drawable/right"
                     android:layout_marginLeft="@dimen/space_5"
                     android:layout_gravity="fill_vertical"
-                    android:layout_width="@dimen/space_20"
+                    android:layout_width="@dimen/space_18"
                     android:layout_height="match_parent" />
             </LinearLayout>
         </LinearLayout>
