--- a/app/src/main/res/drawable/btn_shape_login.xml
+++ b/app/src/main/res/drawable/btn_shape_login.xml
@@ -5,6 +5,11 @@
         android:endColor="@color/white"
         android:startColor="@color/white" />
 
+    <stroke
+        android:color="@color/colorSearch"
+        android:width="1dp"
+        />
+
     <padding
         android:bottom="10dp"
         android:left="5dp"
