--- a/app/src/main/res/layout/row_disposisi_pribadi.xml
+++ b/app/src/main/res/layout/row_disposisi_pribadi.xml
@@ -69,29 +69,30 @@
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:layout_marginTop="-2dp"
                     android:textSize="@dimen/space_12"
+                    android:maxLines="1"
+                    android:textStyle="italic"
+                    android:layout_marginTop="-2dp"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
                     android:layout_marginRight="@dimen/space_45"
-                    android:layout_marginLeft="@dimen/space_3" />
+                    android:layout_marginLeft="@dimen/space_3"/>
 
                 <ui.CustomtextView
                     font:name = "GOTHAM_LIGHT"
-                    android:id="@+id/lbl_size"
+
+                    android:textSize="@dimen/space_12"                    android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
-                    android:textSize="@dimen/space_12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/lbl_attach"
                     android:maxLines="1"
-                    android:layout_marginLeft="@dimen/space_3"
                     android:layout_alignBottom="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
                     android:layout_marginRight="@dimen/space_45"
+                    android:layout_marginLeft="@dimen/space_3"
                     android:textStyle="italic" />
 
                 <ImageView
@@ -143,7 +144,7 @@
             <RelativeLayout
                 android:id="@+id/btnPrint"
                 android:layout_height="@dimen/space_35"
-                android:background="@drawable/btn_shape_facebook"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="lihat detail"
                 android:textColor="#ffffff"
@@ -155,16 +156,19 @@
                 android:layout_marginRight="@dimen/space_3"
                 android:layout_alignBottom="@+id/btnDownload">
                 <ImageView
+                    android:id="@+id/imgInfo"
                     android:src="@drawable/info_32"
+                    android:tint="@color/grey"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25" />
 
                 <ui.CustomtextView
+                    android:id="@+id/textInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:onClick="onClick"
                     android:text="lihat detail"
-                    android:textColor="#ffffff"
+                    android:tint="@color/grey_s"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
@@ -180,36 +184,42 @@
             <RelativeLayout
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
-                android:background="@drawable/btn_shape_all_blue"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
                 android:textSize="@dimen/space_12"
-                android:layout_width="120dp"
                 android:layout_height="@dimen/space_30"
                 android:layout_below="@+id/layout_attachment"
                 android:layout_marginTop="@dimen/space_3"
                 android:layout_alignRight="@+id/layout_attachment"
-                android:layout_alignEnd="@+id/layout_attachment">
+                android:layout_alignEnd="@+id/layout_attachment"
+                android:layout_width="103dp">
                 <ImageView
+                    android:id="@+id/imgDownload"
                     android:src="@drawable/downloadsave32"
+                    android:tint="@color/grey"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25"
                     android:layout_marginRight="@dimen/space_3" />
 
                 <ui.CustomtextView
+                    android:id="@+id/textDownload"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="onClick"
-                    android:text="  lihat dokumen"
-                    android:textColor="#ffffff"
+                    android:text="lihat surat"
+                    android:tint="@color/grey_s"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="@dimen/space_20" />
             </RelativeLayout>
 
         </RelativeLayout>
