--- a/app/src/main/res/layout/row_persuratan_umum.xml
+++ b/app/src/main/res/layout/row_persuratan_umum.xml
@@ -144,7 +144,7 @@
             <RelativeLayout
                 android:id="@+id/btnPrint"
                 android:layout_height="@dimen/space_35"
-                android:background="@drawable/btn_shape_facebook"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="lihat detail"
                 android:textColor="#ffffff"
@@ -156,16 +156,19 @@
                 android:layout_marginRight="@dimen/space_3"
                 android:layout_alignBottom="@+id/btnDownload">
                 <ImageView
+                    android:id="@+id/imgInfo"
                     android:src="@drawable/info_32"
+                    android:tint="@color/grey"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25" />
 
                 <ui.CustomtextView
+                    android:id="@+id/textInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:onClick="onClick"
                     android:text="lihat detail"
-                    android:textColor="#ffffff"
+                    android:tint="@color/grey_s"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
@@ -181,7 +184,7 @@
             <RelativeLayout
                 android:drawableLeft="@drawable/download24"
                 android:id="@+id/btnDownload"
-                android:background="@drawable/btn_shape_all_blue"
+                android:background="@drawable/btn_shape_all_transparant_blue"
                 android:onClick="onClick"
                 android:text="  lihat dokumen  "
                 android:textColor="#ffffff"
@@ -193,25 +196,27 @@
                 android:layout_alignEnd="@+id/layout_attachment"
                 android:layout_width="103dp">
                 <ImageView
+                    android:id="@+id/imgDownload"
                     android:src="@drawable/downloadsave32"
+                    android:tint="@color/grey"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25"
                     android:layout_marginRight="@dimen/space_3" />
 
                 <ui.CustomtextView
+                    android:id="@+id/textDownload"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="onClick"
                     android:text="lihat surat"
-                    android:textColor="#ffffff"
+                    android:tint="@color/grey_s"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
 
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_toEndOf="@+id/imageView16"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginLeft="@dimen/space_20" />
