--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,7 +112,8 @@
                 android:hint="Password"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/space_30" />
+                android:layout_marginLeft="@dimen/space_30"
+                android:password="true" />
 
             </RelativeLayout>
 
